added classes and styled them in css

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   </head>
   <body>
     <div class="hero">
-      Hi I am
-      <h1>Zahra Bensaidane</h1>
-      <h2>Frontend Developer, based in Montreal.</h2>
-      <a href="#" class="btn btn-branding"> contact me </a>
+      <p>Hi I am</p>
+      <h1 class="mb-4">Zahra Bensaidane</h1>
+      <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
+      <a href="#" class="btn btn-branding mb-5"> Get started </a>
     </div>
   </body>
 </html>
