added the first grid
added image and yogurt project

--- a/index.html
+++ b/index.html
@@ -40,5 +40,23 @@
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
       <a href="#" class="btn btn-branding mb-5"> Get started </a>
     </div>
+    <p>Featured Project which my best projects be choice to show</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="/image/yogurt.png" class="img-fluid" />
+        </div>
+        <div class="col">
+          <h1>Yogurt Project</h1>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <link href="#" class="btn btn-discover" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
