--- a/index.html
+++ b/index.html
@@ -38,23 +38,33 @@
       <p>Hi I am</p>
       <h1 class="mb-4">Zahra Bensaidane</h1>
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
-      <a href="#" class="btn btn-branding mb-5"> Get started </a>
+      <a
+        href="#"
+        class="btn btn-branding mb-5"
+        title="a button to get more info"
+      >
+        Get started
+      </a>
     </div>
     <p>Featured Project which my best projects be choice to show</p>
     <div class="container">
       <div class="row">
         <div class="col">
-          <img src="/image/yogurt.png" class="img-fluid" />
+          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
         </div>
         <div class="col">
           <h1>Yogurt Project</h1>
-          <p>
+          <p class="project-paragraph">
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <link href="#" class="btn btn-discover" />
+          <link
+            href="#"
+            class="btn btn-discover"
+            title="view detail project button "
+          />
         </div>
       </div>
     </div>
