styled the button and added paragraph css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         Get started
       </a>
     </div>
-    <p>Featured Project which my best projects be choice to show</p>
+    <p class="mb-10 mt-10">
+      Featured Project which my best projects be choice to show
+    </p>
     <div class="container">
       <div class="row">
         <div class="col">
@@ -60,11 +62,12 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <link
+          <a
             href="#"
             class="btn btn-discover"
-            title="view detail project button "
-          />
+            title="view detail project button"
+            >View project detail</a
+          >
         </div>
       </div>
     </div>
