--- a/index.html
+++ b/index.html
@@ -51,23 +51,25 @@
     </p>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col d-none d-lg-block">
           <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
         </div>
         <div class="col">
-          <h1>Yogurt Project</h1>
-          <p class="project-paragraph">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a
-            href="#"
-            class="btn btn-discover"
-            title="view detail project button"
-            >View project detail</a
-          >
+          <div class="project-description">
+            <h1>Yogurt Project</h1>
+            <p class="project-paragraph">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="#"
+              class="btn btn-discover"
+              title="view detail project button"
+              >View project detail</a
+            >
+          </div>
         </div>
       </div>
     </div>
