--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         Get started
       </a>
     </div>
-    <p class="mb-10 mt-10">
-      Featured Project which my best projects be choice to show
-    </p>
+    <p>Featured Project which my best projects be choice to show</p>
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
@@ -56,7 +54,51 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h1>Yogurt Project</h1>
+            <h2>Yogurt Project</h2>
+            <p class="project-paragraph">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="#"
+              class="btn btn-discover"
+              title="view detail project button"
+              >View project detail</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2>Yogurt Project</h2>
+            <p class="project-paragraph">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="#"
+              class="btn btn-discover"
+              title="view detail project button"
+              >View project detail</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2>Yogurt Project</h2>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
