changed h1 and h2 styling + media querries

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
+          <img src="/weather.png" class="img-fluid" alt="yogurt image" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2>Yogurt Project</h2>
+            <h2>weather app Project</h2>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -94,11 +94,15 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
+          <img
+            src="/image/dictionary.png"
+            class="img-fluid"
+            alt="yogurt image"
+          />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2>Yogurt Project</h2>
+            <h2>Dictionary Project</h2>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
