fixed h3 title bug

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="hero">
-      <p>Hi I am</p>
+      <p>Hi, I am</p>
       <h1 class="mb-4">Zahra Bensaidane</h1>
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
       <a
@@ -54,7 +54,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2>Yogurt Project</h2>
+            <h3>Yogurt Project</h3>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -71,12 +71,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col d-none d-lg-block">
-          <img src="/weather.png" class="img-fluid" alt="yogurt image" />
-        </div>
         <div class="col">
           <div class="project-description">
-            <h2>weather app Project</h2>
+            <h3>Weather app Project</h3>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -90,6 +87,9 @@
               >View project detail</a
             >
           </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="/image/weather.png" class="img-fluid" alt="yogurt image" />
         </div>
       </div>
       <div class="row">
@@ -102,7 +102,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2>Dictionary Project</h2>
+            <h3>Dictionary Project</h3>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
