--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Zahra Bensaidane is a front-end developer from Montreal passionate about coding. She is also a local architectural designer  "
     />
-    <title>protfolio project- Zahra Bensaidane</title>
+    <title>protfolio - Zahra Bensaidane</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
