added media quarries for SEO

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
       <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="about-section-content">
             <p class="mb-4">
               For anyone who wants to start learning code, this workshop is very
@@ -49,10 +49,10 @@
             <a href="#" class="btn btn-branding">View all projects</a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <img
             src="/image/zahra.jpg"
-            class="img-fluid rounded"
+            class="img-fluid rounded mt-5"
             alt="zahra photo"
           />
         </div>
