--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       rel="stylesheet"
     />
   </head>
+  <nav>
+    <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about.html">About</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
   <body>
     <div class="hero">
       <p>👋 Hi, I am</p>
