made element classes more generic

--- a/work.html
+++ b/work.html
@@ -34,29 +34,13 @@
     />
   </head>
   <body>
-    <div class="content-container container">
+    <div class="about-section container">
       <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
       <div class="row">
         <div class="col-lg-6">
-          <div class="content">
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus.
-            </p>
-            <a href="#" class="btn btn-branding">View all projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="/image/zahra.jpg"
-            class="img-fluid rounded mt-5"
-            alt="zahra photo"
-          />
-        </div>
-      </div>
-    </div>
+          <div class="about-section-content">
+            
+    </div></div> </div>
   </body>
 </html>
