changed variables and replaced images

--- a/index.html
+++ b/index.html
@@ -62,16 +62,27 @@
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="/image/yogurt.png" class="img-fluid" alt="yogurt image" />
+          <img
+            src="/image/design.png"
+            class="img-fluid"
+            alt="Zaha Hadid Chair image"
+          />
         </div>
         <div class="col">
           <div class="project-description">
-            <h3>Yogurt Project</h3>
+            <h3>Favorite Chair Project</h3>
             <p class="project-paragraph">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              the design is a simple three-dimensional gesture that zigzags in
+              space as part of the continued discourse between form and
+              function, elegance and utility, differentiation and continuity.
+              geometric abstractions inform the design's linear loop,
+              articulated along its path in a language that alternates thin wire
+              streams and large surfaces to provide both ergonomic affordances
+              and inherent stability to the overall shape. the subtle play of
+              contrasting angular corners and wide, smooth curves are a result
+              of the calligraphic gestures of Hadid's two-dimensional works, a
+              three-dimensional presentation of a controlled brush stroke on a
+              canvas, the synthesis of an idea: the sketch.
             </p>
             <a
               href="#"
@@ -101,20 +112,24 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="/image/weather.png" class="img-fluid" alt="yogurt image" />
+          <img
+            src="/image/weatherz.png"
+            class="img-fluid"
+            alt="weather app image"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="/image/dictionary.png"
+            src="/image/olibakery.png"
             class="img-fluid"
-            alt="yogurt image"
+            alt="OliBakery website image"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h3>Dictionary Project</h3>
+            <h3>OliBakery Project</h3>
             <p class="project-paragraph">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
