added heading to about and contact html

--- a/about.html
+++ b/about.html
@@ -33,6 +33,17 @@
       rel="stylesheet"
     />
   </head>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="/about.html">About</a></li>
+        <li><a href="/work.html">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <body>
     <div class="content-container container">
       <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
