--- a/work.html
+++ b/work.html
@@ -33,14 +33,65 @@
       rel="stylesheet"
     />
   </head>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li class="active"><a href="/index.html">Work</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
   <body>
-    <div class="about-section container">
-      <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
-      <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-section-content">
-            
-    </div></div> </div>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-4">Take a look at what I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <img
+              src="/image/design.png"
+              class="img-fluid mb-3 rounded"
+              alt="Z chair by Zaha Hadid"
+            />
+            <h3 class="text-center m-0">Favorite Chair Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/image/weatherz.png"
+              class="img-fluid mb-3 rounded"
+              alt="Z chair by Zaha Hadid"
+            />
+            <h3 class="text-center m-0">Weather App Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS, and JavaScript
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/image/olibakery.png"
+              class="img-fluid mb-3 rounded"
+              alt="OliBakery website"
+            />
+            <h3 class="text-center m-0">Olibakery Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/image/portfolio.png"
+              class="img-fluid mb-3 rounde"
+              alt="Portfolio website"
+            />
+            <h3 class="text-center m-0">Portfolio Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, Bootstrap, and CSS
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
