--- a/contact.html
+++ b/contact.html
@@ -38,35 +38,35 @@
       <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
       <ul>
         <li><a href="/">Home</a></li>
-        <li class="active"><a href="/about.html">About</a></li>
+        <li><a href="/about.html">About</a></li>
         <li><a href="/work.html">Work</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li class="active"><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
   <body>
     <div class="content-container container">
-      <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
-      <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus.
-            </p>
-            <a href="#" class="btn btn-branding">View all projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="/image/zahra.jpg"
-            class="img-fluid rounded mt-5"
-            alt="zahra photo"
-          />
-        </div>
+      <div class="content">
+        <h1 class="mb-5">Let's keep in touch!</h1>
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:zahra.bensaidane@gmail.com" target="_blank"
+            >zahra.bensaidane@gmail.com</a
+          >
+        </p>
+        <h3>Instagram</h3>
+        <p>
+          <a href="https://www.instagram.com/bzaadesign/" target="_blank"
+            >@bzaadesign</a
+          >
+        </p>
+
+        <h3>Twitter</h3>
+        <p>
+          <a href="https://www.pinterest.ca/ZahraBDesign/" target="_blank"
+            >BZAA design</a
+          >
+        </p>
       </div>
     </div>
   </body>
