--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/about.html">About</a></li>
         <li><a href="/work.html">Work</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -49,7 +49,7 @@
     <div class="hero">
       <p>👋 Hi, I am</p>
       <h1 class="mb-4">Zahra Bensaidane</h1>
-      <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
+      <h2 class="mb-5">Front-end Developer, based in Montreal.</h2>
       <a
         href="#"
         class="btn btn-branding mb-5"
