--- a/contact.html
+++ b/contact.html
@@ -48,25 +48,27 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's keep in touch!</h1>
-        <h3>Email</h3>
-        <p>
-          <a href="mailto:zahra.bensaidane@gmail.com" target="_blank"
-            >zahra.bensaidane@gmail.com</a
-          >
-        </p>
-        <h3>Instagram</h3>
-        <p>
-          <a href="https://www.instagram.com/bzaadesign/" target="_blank"
-            >@bzaadesign</a
-          >
-        </p>
+        <div class="contact-item">
+          <h3>Email</h3>
+          <p>
+            <a href="mailto:zahra.bensaidane@gmail.com" target="_blank"
+              >zahra.bensaidane@gmail.com</a
+            >
+          </p>
+          <h3>Instagram</h3>
+          <p>
+            <a href="https://www.instagram.com/bzaadesign/" target="_blank"
+              >@bzaadesign</a
+            >
+          </p>
 
-        <h3>Twitter</h3>
-        <p>
-          <a href="https://www.pinterest.ca/ZahraBDesign/" target="_blank"
-            >BZAA design</a
-          >
-        </p>
+          <h3>Twitter</h3>
+          <p>
+            <a href="https://www.pinterest.ca/ZahraBDesign/" target="_blank"
+              >BZAA design</a
+            >
+          </p>
+        </div>
       </div>
     </div>
   </body>
