--- a/work.html
+++ b/work.html
@@ -50,27 +50,29 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-center">
             <img
               src="/image/design.png"
               class="img-fluid mb-3 rounded"
               alt="Z chair by Zaha Hadid"
             />
+
             <h3 class="text-center m-0">Favorite Chair Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-center">
             <img
               src="/image/weatherz.png"
               class="img-fluid mb-3 rounded"
               alt="Z chair by Zaha Hadid"
             />
+
             <h3 class="text-center m-0">Weather App Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS, and JavaScript
             </p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-center">
             <img
               src="/image/olibakery.png"
               class="img-fluid mb-3 rounded"
@@ -79,7 +81,7 @@
             <h3 class="text-center m-0">Olibakery Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 text-center">
             <img
               src="/image/portfolio.png"
               class="img-fluid mb-3 rounde"
