--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             >
           </p>
 
-          <h3>Twitter</h3>
+          <h3>Pinterest</h3>
           <p>
             <a href="https://www.pinterest.ca/ZahraBDesign/" target="_blank"
               >BZAA design</a
