--- a/about.html
+++ b/about.html
@@ -69,5 +69,19 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="mailto:zahra.bensaidane@gmail.com" class="email-link"
+        >zahra.bensaidane@gmail.com</a
+      >
+      <div class="social-links">
+        <a href="@bzaadesing"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/Zahra-Bens"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a href="https://www.pinterest.ca/ZahraBDesign/">
+          <i class="fab fa-pinterest"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
