styled the footer section with css

--- a/about.html
+++ b/about.html
@@ -32,6 +32,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/19b85ec3f6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <div class="container">
     <nav class="d-flex justify-content-between">
@@ -68,20 +72,35 @@
           />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let’s work together :)</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:zahra.bensaidane@gmail.com" class="email-link"
+            >zahra.bensaidane@gmail.com</a
+          >
+        </div>
+        <div class="social-links text-center">
+          <a href="https://www.instagram.com/bzaadesign/"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://github.com/Zahra-Bens"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.pinterest.ca/ZahraBDesign/">
+            <i class="fab fa-pinterest"></i
+          ></a>
+        </div>
+      </footer>
     </div>
-    <footer>
-      <a href="mailto:zahra.bensaidane@gmail.com" class="email-link"
-        >zahra.bensaidane@gmail.com</a
-      >
-      <div class="social-links">
-        <a href="@bzaadesing"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/Zahra-Bens"
-          ><i class="fab fa-github"></i
-        ></a>
-        <a href="https://www.pinterest.ca/ZahraBDesign/">
-          <i class="fab fa-pinterest"></i
-        ></a>
-      </div>
-    </footer>
   </body>
 </html>
