--- a/work.html
+++ b/work.html
@@ -32,6 +32,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/19b85ec3f6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <div class="container">
     <nav class="d-flex justify-content-between">
