--- a/about.html
+++ b/about.html
@@ -37,18 +37,28 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <div class="container">
+   <div class="container">
     <nav class="d-flex justify-content-between">
-      <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
+      <a href="/" title="Homepage">
+        <img
+          src="/image/zblogo.png"
+          class="logo d-none d-md-block"
+          alt="Zahra logo"
+        />
+        <img
+          src="/image/zblogo.png"
+          class="logo d-block d-md-none"
+          alt="Zahra logo"
+        />
+      </a>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li class="active"><a href="/about.html">About</a></li>
-        <li><a href="/work.html">Work</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li ><a href="/" title="Homepage">Home</a></li>
+        <li class="active"><a href="/about.html" title="About Zahra">About</a></li>
+        <li><a href="/work.html" title="Zahra's Work">Work</a></li>
+        <li><a href="/contact.html" title="Contact Zahra">Contact</a></li>
       </ul>
     </nav>
   </div>
-  <body>
     <div class="content-container container">
       <h1 class="mb-4">Hello, I am Zahra Bensaidane</h1>
       <h2 class="mb-5">Frontend Developer, based in Montreal.</h2>
