--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Zahra Bensaidane is a front-end developer from Montreal passionate about coding. She is also a local architectural designer  "
+      content="Zahra Bensaidane is a front-end engineer from Montreal passionate about coding. She is also a local architectural designer  "
     />
-    <title>protfolio - Zahra Bensaidane</title>
+    <title>Front-end developer - Zahra Bensaidane</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -40,12 +40,23 @@
 
   <div class="container">
     <nav class="d-flex justify-content-between">
-      <img src="/image/zblogo.png" class="img-fluid logo" alt="logo" />
+      <a href="/" title="Homepage">
+        <img
+          src="/image/zblogo.png"
+          class="logo d-none d-md-block"
+          alt="Zahra logo"
+        />
+        <img
+          src="/image/zblogo.png"
+          class="logo d-block d-md-none"
+          alt="Zahra logo"
+        />
+      </a>
       <ul>
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/work.html">Work</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li class="active"><a href="/" title="Homepage">Home</a></li>
+        <li><a href="/about.html" title="About Zahra">About</a></li>
+        <li><a href="/work.html" title="Zahra's Work">Work</a></li>
+        <li><a href="/contact.html" title="Contact Zahra">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -55,8 +66,9 @@
       <h1 class="mb-4">Zahra Bensaidane</h1>
       <h2 class="mb-5">Front-end Developer, based in Montreal.</h2>
       <a
-        href="#"
+        href="/work.html"
         class="btn btn-branding mb-5"
+        alt="learn more"
         title="a button to get more info"
       >
         Get started
@@ -89,7 +101,7 @@
               canvas, the synthesis of an idea: the sketch.
             </p>
             <a
-              href="#"
+              href="/work.html"
               class="btn btn-discover"
               title="view detail project button"
               >View project detail</a
@@ -108,7 +120,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <a
-              href="#"
+              href="/about.html"
               class="btn btn-discover"
               title="view detail project button"
               >View project detail</a
@@ -119,7 +131,7 @@
           <img
             src="/image/weatherz.png"
             class="img-fluid"
-            alt="weather app image"
+            alt="weather app preview"
           />
         </div>
       </div>
@@ -141,7 +153,7 @@
               large language ocean. A small river named Duden flows by
             </p>
             <a
-              href="#"
+              href="/work.html"
               class="btn btn-discover"
               title="view detail project button"
               >View project detail</a
