--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
               everything is well explained, homework and deadlines are good for
               keep focus.
             </p>
-            <a href="#" class="btn btn-branding">View all projects</a>
+            <a href="/work.html" class="btn btn-branding">View all projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -91,26 +91,27 @@
             <p class="text-muted">Let’s work together :)</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding" title="contact Zahra">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:zahra.bensaidane@gmail.com" class="email-link"
+          <a href="mailto:zahra.bensaidane@gmail.com" class="email-link" title="email Zahra"
             >zahra.bensaidane@gmail.com</a
           >
         </div>
         <div class="social-links text-center">
-          <a href="https://www.instagram.com/bzaadesign/"
+          <a href="https://www.instagram.com/bzaadesign/" title="Instgram profile"
             ><i class="fab fa-instagram"></i
           ></a>
           <a href="https://github.com/Zahra-Bens"
-            ><i class="fab fa-github"></i
+            ><i class="fab fa-github" title="Github profile"></i
           ></a>
           <a href="https://www.pinterest.ca/ZahraBDesign/">
-            <i class="fab fa-pinterest"></i
-          ></a>
-        </div>
-      </footer>
+            <i class="fab fa-pinterest" title="Pinterest profile"></i
+          ></a></div>
+       <div class="source">
+        <p class="text-center mt-5 ">This project was codedby Zahra Bensaidane, and it is <a href="https://github.com/Zahra-Bens/portfolio-project" target="_blank" title="Zahra's code">open-sourced</a> on Github</p>
+       </div></footer>
     </div>
   </body>
 </html>
